mysite_kitchen_lyteia/css/main.css
/*----- Document -----*/
html{
background-image: url('../images/bg.jpg');
max-width: 960px;
margin:20px auto;
overflow:hidden;
overflow-x: auto;
overflow-y: auto;
text-align:center;
font: .8125em/1 verdana, arial, sans-serif;
color: #424242;
}

#wrapper{ 
margin: 0 auto;
width: 100%;
background-image: url('../images/content_bg.png');
margin: 5px;
padding: 5px;
}

/*body{
font: .8125em/1 verdana, arial, sans-serif;
color: #424242;
}*/

/*----- Header -----*/
header{
overflow: hidden;
width: 100%;
margin: 0 0 1.25em 0;
padding: 2.2em 0 0.95em 0;
background: #232323 url('../images/header.jpg') no-repeat;
border-bottom: 1px solid #ccc;
}

#header_wrap{
overflow: hidden;
width: 100% /*960px*/;
margin: auto;
background-size: 100%;
}

#logo{
float: left;
text-indent: 62499.938em/*-999999px*/;
}

/*----- Navigation -----*/

#nav ul{
margin:244px 2px 0;
border-top:solid 1px #000;
height:100%;
overflow:hidden;
color:#000000;
background-color:#E8E8E8;
}

#nav ul li{
float: left;
width: 10%;/*100px;*/
font:bold 11px/30px Verdana, Arial, Helvetica, sans-serif;
text-transform:uppercase;
padding:0 3%;/*34px;*/
}

#nav ul li a{
text-decoration:none;
color:#000000;
display:block;
height:30px;
line-height:30px;
}

#nav ul li a:hover{ 
color:#000000;
background:#f5ee30;
}

#nav ul li a.active{
color:#f5ee30;
}

/*----- Content -----*/
#columns{
text-align: justify;
-moz-column-count: 3;
-moz-column-gap: 24px;
-moz-column-rule: 1px solid #c4c8cc;
-webkit-column-count: 3;
-webkit-column-gap: 24px;
-webkit-column-rule: 1px solid #c4c8cc;
padding:1.041667% /*10px*/;
}


aside h3{
text-shadow: 0.125em 0.125em 0.125em #111;
}

h1, h2, h3{
font-family: 'Architects Daughter', cursive;
text-align: left;
}
.kicks h2,h3{
text-align: center;
}

p{
margin:1.041667%;/*10px;*/
padding:0.520833%;/*5px;*/
}

li{
list-style-type: none;
}

.video_style{
background-color: #707070;
margin: auto;
opacity: 0.7;
width: 80%;
}

iframe{
margin: auto;
border: 1px solid #f5ee30;
/*height: 380px*/;
width: 50% /*480px*/;
padding-top: 1.041666666667%;/*5px;*/
padding-bottom:1.041666666667%;/* 5px;*/
}

/*video{
border: 1px solid #f5ee30;
height: 384px;
width: 480px;
padding: 0px;
/*margin-left: 25px;
margin-bottom: 25px;*/


#gallery ul{
width: 29.666667%/*267px*/;
/*width: 80%;/*800px;*/
}

#gallery li{
width: 20%;
float: left;
display: block;
padding:0.25%; /*2px;*/
}

#gallery li img{
max-width: 100%;
}

.other{
clear: both;
padding: 1.041667%;/*10px;*/
}


.main_image{
width: 87.361111%/*646px*/;
text-align: center;
}

.main_image img{
max-width: 100%;
}

#kick_list{
margin-left: 0;
padding-left: 0;
list-style: none;
}

#kick_list li{
list-style-image: url('../images/bullet.gif');
margin: 10px;
padding: 5px;
}

#kick_list li img{
max-width: 100%;
}

aside{
float: right;
width: 25%;/*200px*/
/* 	margin: 0 0 20px 0; */
text-align: right;
padding: 1.5%/*3px*/ 1%;/*20px;*/
}

.gallery ul{
padding: 0;
}

.gallery li{
width:25%;
float: right;
}

.gallery li img{
max-width: 100%;
}

div #article{
text-align: justify;
-moz-column-count: 2;
-moz-column-gap: 1.25em;
-moz-column-rule: 1px solid #c4c8cc;
-webkit-column-count: 2;
-webkit-column-gap: 1.25em;
-webkit-column-rule: 1px solid #c4c8cc;
}

div #article a{
color: #000000;
-moz-border-radius: 15px;
border-radius: 15px;
}

div #article a:hover{
color: #f5ee30;
}


div #gallery_wrap h3{
text-align: center;
}

/*----- Table -----*/
table{/*width by 960 padding by 720(initial width of table)*/
width: 80%/*720px*/;
border-collapse: collapse;
}

table caption{
padding: 2.777778%/*20px*/ 0 1.388889%/*10p*/ 0;
/* 	font-weight: bold; */
/* 	font-size: 1.1em; */
text-align: left;
caption-side: bottom;
/* 	color: #0070B7; */
}

table tr th{
padding: 0.694444%;/*5px;*/
background: #f5ee30;
border: 1px solid #ddd;
font-size: .9em;
text-align: left;
}

table tr.odd{
background: #fff;
}

table tr.even{
background: #eee;
}

table tr td{
padding: 0.694444%;/*5px;*/
border: 1px solid #ddd;
font-size: .9em;
}

table a{
color: #000000;
}

table a:hover{
color: #f5ee30;
}

/*----- Contact Form -----*/
form div{/*width by 960 padding by 554(initial width of form)*/
margin-left: 1.666667%;/*16px;*/
}

form label{
display: block;
margin-right: 20.83333%;/*20px;*/
float: left;
text-align: right;
width: 8.333333%;/*80px;*/
}

form input, form select, form textarea{
width: 73.285199%;/*554px;*/
padding: 0.361011%;/*2px;*/
margin-bottom: 2.083333%;/*20px;*/
background: #fefefe;
border-left: 1px solid #aaa;
border-top: 1px solid #aaa;
border-right: 1px solid #ddd;
border-bottom: 1px solid #ddd;
font-family: Verdana, sans-serif;
font-size: .9em;
}

form input:focus, form select:focus, form textarea:focus{
background: #ffd;
}

form select{
width: 16.666667%;/*28.880866%;/*160px;*/
}

form select option{
padding: 0 1.083032%/*6px*/ 0 0.722022%;/*4px;*/
}

form #agreement{
width: 1.666667%;/*16px;*/
}

form p{
margin: 0 0 1.5625%/*15px*/ 0;
}


form button{/* width are divided by 960 padding by 100(inital width of form button)*/
width:10.416667%;/*100px;*/
margin:2.083333%/*20px*/ 0 0 /*99px;*/ 10.3125%;
float: right; 
background: #6eb4f2; /* Old browsers */
background: -moz-linear-gradient(linear, left top, left bottom,#6eb4f2 0%, #54a4ee 50%, #3690f0 51%, #1e68de 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6eb4f2), color-stop(50%,#54a4ee), color-stop(51%,#3690f0), color-stop(100%,#1e68de)); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top,  #6eb4f2 0%,#54a4ee 50%,#3690f0 51%,#1e68de 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  #6eb4f2 0%,#54a4ee 50%,#3690f0 51%,#1e68de 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  #6eb4f2 0%,#54a4ee 50%,#3690f0 51%,#1e68de 100%); /* IE10+ */
background: linear-gradient(#6eb4f2 0%,#54a4ee 50%,#3690f0 51%,#1e68de 100%); /* W3C */
border: 1px solid #6eb4f2;
-webkit-border-radius: 5px;
-moz-border-radius: 5px;
border-radius: 5px;
-webkit-box-shadow: inset 0px 0px 0px 1px rgba(255, 115, 100, 0.4), 0 1px 3px #333333;
-moz-box-shadow: inset 0px 0px 0px 1px rgba(255, 115, 100, 0.4), 0 1px 3px #333333;
box-shadow: inset 0px 0px 0px 1px rgba(255, 115, 100, 0.4), 0 1px 3px #333333;
color: #fff;
font: 1.25em "helvetica neue", helvetica, arial, sans-serif;
line-height: 1;
padding: 0.12%/*12px*/ 0 0.14%/*14px*/ 0;
text-align: center;
text-shadow: 0px -1px 1px rgba(0, 0, 0, 0.8);
}

form button{
font-family: Arial, Helvetica, sans-serif;
font-size: .88em;
color: #123d54;
padding: 10px 20px;
background: -moz-linear-gradient(top,#f5ee30 0%,#abab57);
background: -webkit-gradient(linear, left top, left bottom, from(#f5ee30),to(#abab57));
-moz-border-radius: 6px;
-webkit-border-radius: 6px;
border-radius: 6px;
border: 1px solid #707070;
-moz-box-shadow:0px 1px 3px rgba(000,000,000,0.5),inset 0px 0px 1px rgba(255,255,255,1);
-webkit-box-shadow:0px 1px 3px rgba(000,000,000,0.5), inset 0px 0px 1px rgba(255,255,255,1);
box-shadow:0px 1px 3px rgba(000,000,000,0.5),inset 0px 0px 1px rgba(255,255,255,1);
text-shadow:0px -1px 0px rgba(171,171,87,0.7),0px 1px 0px rgba(255,255,255,0.3);
}

form button:hover{
background: #96c9f6; /* Old browsers */
background: -moz-linear-gradient(top,  #96c9f6 0%, #83bdf3 50%, #6eaff4 51%, #5b91e9 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#96c9f6), color-stop(50%,#83bdf3), color-stop(51%,#6eaff4), color-stop(100%,#5b91e9)); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(#96c9f6 0%,#83bdf3 50%,#6eaff4 51%,#5b91e9 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  #96c9f6 0%,#83bdf3 50%,#6eaff4 51%,#5b91e9 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  #96c9f6 0%,#83bdf3 50%,#6eaff4 51%,#5b91e9 100%); /* IE10+ */
background: linear-gradient(#96c9f6 0%,#83bdf3 50%,#6eaff4 51%,#5b91e9 100%); /* W3C */
cursor: pointer; 
}

/*----- Footer -----*/
footer{
clear: both;
padding-bottom: 1.041667%; /*10px;*/
font-size: .9em;
text-align: center;
}

footer a{
color: #000000;
}

footer a:hover{
color: #f5ee30;
}



/*----- Media Queries -----*/

/* Tablet Portrait size to standard 960 (device and browsers)*/
@media screen and (min-width:768px) and (max-width:959px){
	html{
	background-color: #232323;
	background-image: none; 
	margin: 0;  
	}

	#wrapper{
	width: auto;
	margin: auto;
	/*background-image: none;*/
	/*background-color:red;*/
	}

	header{
	background: url('../images/header.jpg') no-repeat center;
	}

	nav ul{
	width: 100%;
	}

	nav ul li{
	width: 50%;
	}

	#nav ul li a:hover{ 
	color:#f5ee30;
	background:none;/*#f5ee30;*/
	}

	h1, h2, h3, h4, p{
	font-weight: normal;
	text-align: left;
	}

	/*iframe {
	width: 100%;
	height: auto;
	min-height: 300px;
	}*/

	#columns{
	-moz-column-count: 1;
	-moz-column-gap: 0;
	-moz-column-rule: 0;
	-webkit-column-count: 1;
	-webkit-column-gap: 0;
	-webkit-column-rule: 0;
	text-align: left;
	}

	div #article{
	text-align: justify;
	-moz-column-count: 1;
	-moz-column-gap: 0;
	-moz-column-rule: 1px solid #c4c8cc;
	-webkit-column-count: 1;
	-webkit-column-gap: 0;
	-webkit-column-rule: 1px solid #c4c8cc;
	}

	p .main_image{
	max-width: 350px;
	}

	.other{
	text-align: left;
	}

	section p{
	text-align: left;
	}

	footer{
	text-align: left;
	}
}

/* Mobile Landscape size to Tablet Portrait (device and browsers)*/
@media only screen and (min-width:480px)and (max-width:767px){
	html{
	background-color: #232323;
	background-image: none; 
	margin: 0;  
	}

	#wrapper{
	width: auto;
	margin: auto;
	/*background-image: none;*/
	/*background-color:red;*/
	}

	header{
	background: url('../images/header.jpg') no-repeat center;
	}

	nav ul{
	width: 100%;
	}

	nav ul li{
	width: 50%;
	}

	#nav ul li a:hover{ 
	color:#f5ee30;
	background:none;/*#f5ee30;*/
	}

	h1, h2, h3, h4, p {
	font-weight: normal;
	text-align: left;
	}
	
	/*iframe {
	width: 100%;
	height: auto;
	min-height: 300px;
	}*/

	#columns{
	-moz-column-count: 1;
	-moz-column-gap: 0;
	-moz-column-rule: 0;
	-webkit-column-count: 1;
	-webkit-column-gap: 0;
	-webkit-column-rule: 0;
	text-align: left;
	}

	div #article{
	text-align: justify;
	-moz-column-count: 1;
	-moz-column-gap: 0;
	-moz-column-rule: 1px solid #c4c8cc;
	-webkit-column-count: 1;
	-webkit-column-gap: 0;
	-webkit-column-rule: 1px solid #c4c8cc;
	}

	p .main_image{
	max-width: 350px;
	}

	.other{
	text-align: left;
	}

	section p{
	text-align: left;
	}

	footer{
	text-align: left;
	}
}

/* Mobile Portrait size to Mobile Landscape (device and browsers)*/
@media only screen and (max-width:479px){
	html{
	background-color: #232323;
	background-image: none;
	margin: 0;
	}
	
	#wrapper{
	width: auto;
	margin: auto;
	/*background-image: none;*/
	/*background-color:#fff;*/
	}
	
	header{
	background:url('../images/mobile_header.jpg') no-repeat center;
	}
	
	nav ul{
	width: 100%;
	/*margin: 0;*/
	background: none;
	}
	
	nav ul li{
	width: 50%;
	/*padding: 0;*/
	}

	#nav ul li a:hover{ 
	color: #f5ee30;;
	background:none; /*#f5ee30;*/
	}
	
	.video_style{
	background-color: #fff;
	margin: auto;
	opacity: 1.0;
	width: auto;
	}
	
	iframe{
	width: 100%;
	min-height: 250px;
	border: none;
	}

	table{
	width: 100%;
	}

	aside{
	float: left;
	width: 50%;
	text-align: left;
	padding: 0;
	
	}

	h1, h2, h3, h4, p{
	font-weight: normal;
	text-align: left;
	}

	.gallery ul{
	padding: 0;
	}

	.gallery li{
	float: left;
	}

	#columns{
	-moz-column-count: 1;
	-moz-column-gap: 0;
	-moz-column-rule: 0;
	-webkit-column-count: 1;
	-webkit-column-gap: 0;
	-webkit-column-rule: 0;
	text-align: left;
	}
	
	p .main_image{
	max-width: 250px;
	}

	div #article{
	text-align: justify;
	-moz-column-count: 1;
	-moz-column-gap: 0;
	-moz-column-rule: 0;
	-webkit-column-count: 1;
	-webkit-column-gap: 0;
	-webkit-column-rule: 0;
	}

	.other{
	text-align: left;
	}

	section p{
	text-align: left;
	}
	
	#kick_list li{
	list-style-image: none;
	list-style-type:square;
	text-align: left;
	padding: 1%;
	margin: 3%;
	}

	footer{
	text-align: left;
	}

}

